Essentially finalized the gameplay

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,11 @@ Saved
 *.xcworkspace
 
 Content/StarterContent/*
+Content/InfinityBladeEffects/*
+Content/InfinityBladeFireLands/*
+Content/InfinityBladeIceLands/*
+Content/InfinityBladeGrassLands/*
+Content/SoulCity/*
+Content/ParagonProps/*
+Content/KiteDemo/*
+Content/SampleMap/*
