--- a/Motion.uproject
+++ b/Motion.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "Motion",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
